--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head>
-  <title>Harry Potter</title>
+  <title>Harry Potter - Welcome</title>
   <meta charset="utf-8">
 </head>
 <body>
   <h1><a href="index.html">Harry Potter</a></h1>
   <ol>
-    <li><a href="1.html">Harry Potter</a></li>
+    <li><a href="1.html">Harry Potter, the Boy Who Lived</a></li>
     <li><a href="2.html">Harry Potter and His friends</a></li>
     <li><a href="3.html">Hogwarts</a></li>
   </ol>
